
public class PizzaClassique extends Pizza {
		public PizzaClassique() {
			this.nom="Pizza Classique";
		}
}
