
public class PizzaGrecqueStyleBrest extends Pizza{
	public PizzaGrecqueStyleBrest() {
		this.nom="Pizza Grecque de Brest";
	}
}
