
public class PizzaGrecqueStyleStrasbourg extends Pizza{
	public PizzaGrecqueStyleStrasbourg() {
		this.nom="Pizza Grecque de Strasbourg";
	}
}
