/**
 * @author bruel (from O'Reilly Head-First series)
 * @depend - * - Pizza
 */
public class PizzaPoivronsStyleBrest extends Pizza {
	public PizzaPoivronsStyleBrest() {
		this.nom="Pizza Poivrons de Brest";
	}
}
