/**
 * @author bruel (from O'Reilly Head-First series)
 * @depend - * - Pizza
 */
public class PizzaPoivronsStyleStrasbourg extends Pizza {
	public PizzaPoivronsStyleStrasbourg() {
		this.nom="Pizza Poivrons de Strasbourg";
	}
}
