
public class PizzeriaBrest extends Pizzeria {

	public PizzeriaBrest() {
		super(PizzaFactoryBrest.getInstance());
		// TODO Auto-generated constructor stub
	}


}
