
public class PizzeriaStrasbourg extends Pizzeria {

	public PizzeriaStrasbourg() {
		super(PizzaFactoryStrasbourg.getInstance());
		// TODO Auto-generated constructor stub
	}
	
}
